# codeit

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  coverage.cmake
coverage/: CMakeLists.txt
round1/: CMakeLists.txt
round1/include/: answer.h  differential_evolution.h  keyboard.h  problem.h  progress.h  simulated_annealing.h  solution.h
round1/integration/: CMakeLists.txt  main.cpp  optimize_params.cpp
round1/src/: answer.cpp  differential_evolution.cpp  keyboard.cpp  problem.cpp  progress.cpp  simulated_annealing.cpp  solution.cpp
round1/submission/: keyboard.cpp  keyboard_pthread.cpp
round1/test/: CMakeLists.txt  test_answer.cpp  test_differential_evolution.cpp  test_keyboard.cpp  test_problem.cpp  test_solution.cpp
round2/: CMakeLists.txt
round2/zad1/: CMakeLists.txt
round2/zad1/include/: answer.h  problem.h
round2/zad1/integration/: CMakeLists.txt  main.cpp
round2/zad1/src/: answer.cpp  problem.cpp
round2/zad1/test/: test_answer.cpp  test_problem.cpp
round3/: CMakeLists.txt
round3/include/: answer.h  problem.h
round3/integration/: CMakeLists.txt  main.cpp
round3/src/: answer.cpp  problem.cpp
round3/test/: CMakeLists.txt  test_answer.cpp  test_problem.cpp
